added profile pic and name

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
 						<div class="profile-img"><img src="images/profile-1-250x250.jpg" alt=""></div>
-						<h2><b>Michel SMith</b></h2>
+						<h2><b>Vinay Bagale</b></h2>
 						<h4 class="font-yellow">Key Account Manager</h4>
 						<ul class="information margin-tb-30">
 							<li><b>BORN : </b>August 25, 1987</li>
