Added contact details

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>Nashik, Maharashtra, India 422007</h5>
+								<h5>Nashik, Maharashtra,</h5>
+								<h6>India 422007</h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -45,6 +46,7 @@
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
 								<h5>+91-9730368996</h5>
+								<h6>+91-9730369773</h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -54,6 +56,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h5>vsbagale@gmail.com</h5>
+								<h6>vsbagale@yahoo.com</h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
