Added colors to theme

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 				<div class="col-sm-8">
 					<div class="portfolioFilter clearfix margin-b-80">
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
-						<a href="#" data-filter=".web-design"><b>WEB DESIGN</b></a>
-						<a href="#" data-filter=".branding"><b>BRANDING</b></a>
-						<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>
+						<a href="#" data-filter=".web-design"><b>iOS Apps</b></a>
+						<a href="#" data-filter=".branding"><b>Web Apps</b></a>
+						<a href="#" data-filter=".graphic-design"><b>Webservices</b></a>
 					</div><!-- portfolioFilter -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
