--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn" href="resume/Vinay_Bagale_Resume.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
