--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src="images/profile-1-250x250.jpg" alt=""></div>
+						<!-- <div class="profile-img"><img src="images/profile-1-250x250.jpg" alt=""></div> -->
 						<h2><b>Vinay Bagale</b></h2>
 						<h4 class="font-yellow">Full Stack Developer | iOS engineer | Technical Manager</h4>
 						<ul class="information margin-tb-30">
