--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					<div class="experience margin-b-50">
 						<h4><b>Project Manager</b></h4>
 						<h5 class="font-yellow"><b>Winjit Technologies Pvt Ltd</b></h5>
-						<h6 class="margin-t-10">December 2018 - Present</h6>
+						<h6 class="font-lite-black margin-t-10">December 2018 - Present</h6>
 						<ul class="list margin-b-30">
 								<li><span>Analyzed business requirements, participated in technical design, development and testing of various modules assigned.</span></li>
 								<li><span>In-Depth understanding of entire web based architectures, web technologies, SDLC and OOAD.</span></li>
@@ -191,9 +191,9 @@
 					<div class="experience margin-b-50">
 							<h4><b>Team Lead</b></h4>
 							<h5 class="font-yellow"><b>Winjit Technologies Pvt Ltd</b></h5>
-							<h6 class="margin-t-10">December 2012 - Dec 2018</h6>
+							<h6 class="font-lite-black margin-t-10">December 2012 - Dec 2018</h6>
 							<ul class="list margin-b-30">
-									<li><span>Migrated to web technologies such as javascript, ReactJS and VueJS.</span></li>
+									<li><span>Migrated to web technologies such as <b>javascript</b>, <b>ReactJS</b> and <b>VueJS</b>.</span></li>
 									<li><span>Work with developers to design algorithms and flowcharts.</span></li>
 									<li><span>Collaborated with team members to solve any specific technical problem.</span></li>
 									<li><span>Involved in setting up coding practices within organization.</span></li>
@@ -206,12 +206,12 @@
 					<div class="experience margin-b-50">
 							<h4><b>Software Developer</b></h4>
 							<h5 class="font-yellow"><b>Winjit Technologies Pvt Ltd</b></h5>
-							<h6 class="margin-t-10">December 2010 - Dec 2012</h6>
+							<h6 class="font-lite-black margin-t-10">December 2010 - Dec 2012</h6>
 							<ul class="list margin-b-30">
 									<li><span>Translation of designer mock-ups and wireframes into front-end code.</span></li>
 									<li><span>App integration with device’s networked interface and our existing backend infrastructure and APIs.</span></li>
 									<li><span>Brought value from other platforms and paradigms.</span></li>
-									<li><span>Strong understanding of method dispatch of both Swift and Obj-C.</span></li>
+									<li><span>Strong understanding of method dispatch of both <b>Swift</b> and <b>Obj-C</b>.</span></li>
 									<li><span>Understands multithreading problems beyond the deadlock.</span></li>
 									<li><span>Takes responsibility for design decision made by teammates</span></li>
 									<li><span>Writes unit tests and tried TDD and UI tests</span></li>
@@ -224,7 +224,7 @@
 						<h5 class="font-yellow"><b>Application Nexus</b></h5>
 						<h6 class="font-lite-black margin-t-10">March 2010 - December 2010</h6>
 						<ul class="list margin-b-30">
-								<li><span>Develop and implement web application in Drupal and Joomla.</span></li>
+								<li><span>Develop and implement web application in <b>Drupal</b> and <b>Joomla</b>.</span></li>
 								<li><span>Involve in weekly release cycle meetup as scrum master.</span></li>
 								<li><span>Create technical documentation for reference and reporting.</span></li>
 								<li><span>Worked with CSS background, CSS Layouts, CSS positioning, CSS text, CSS border, CSS margin, CSS padding, Pseudo elements and CSS behaviors.</span></li>
